Add a version to the API

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "/api/swagger_doc";
+        url = "/api/v1/swagger_doc";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
